nowrap nopadding fix

--- a/gsusa/content/src/main/theme/custom/scss/partials/_font.scss
+++ b/gsusa/content/src/main/theme/custom/scss/partials/_font.scss
@@ -12,8 +12,8 @@
   padding: 0;
 }
 
-div.textimage.nowrap div.text p {
-  overflow: visible;
+div.textimage.nowrap div.text {
+  overflow: hidden;
 }
 
 .textimage.nowrap div.image img {
@@ -21,5 +21,5 @@ div.textimage.nowrap div.text p {
 }
 
 .text.parbase.section p {
-  font-size: rem-calc(16);
+  font-size: 1rem;
 }
